Fix header responsiveness - Created 'left-side' and 'right-side' child flex containers - Set header min-width to 'min-content' (avoids overflow) - Set profile-pic flex-shrink to 0 - Added horizontal padding to header

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,14 +12,22 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 0px 10px;
+  min-width: min-content;
+  display: flex;
+  justify-content: space-between;
 }
-
+.header *{
+  margin: 4px;
+  align-self: center;
+}
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -45,4 +53,19 @@ a {
 
 ul {
   list-style-type: none;
+
+  display: flex;
+  justify-content: space-between;
+}
+/* New classes */
+.left-side
+{
+  display:flex;
+  justify-content: flex-start;
+}
+.right-side
+{
+  display: flex;
+  justify-content: space-around;
+  justify-self: flex-end;
 }
